@@ -4643,6 +4643,14 @@ public class IndexWriter implements Closeable, TwoPhaseCommit{
     
   }
   
+  synchronized void incRefDeleter(SegmentInfos segmentInfos) throws IOException {
+    deleter.incRef(segmentInfos, false);
+  }
+  
+  synchronized void decRefDeleter(SegmentInfos segmentInfos) throws IOException {
+    deleter.decRef(segmentInfos);
+  }
+  
   private boolean processEvents(boolean triggerMerge, boolean forcePurge) throws IOException {
     return processEvents(eventQueue, triggerMerge, forcePurge);
   }
@@ -4680,4 +4688,5 @@ public class IndexWriter implements Closeable, TwoPhaseCommit{
      */
     void process(IndexWriter writer, boolean triggerMerge, boolean clearBuffers) throws IOException;
   }
+
 }
