@@ -165,6 +165,10 @@ public class TestStressIndexing extends LuceneTestCase {
   */
   public void testStressIndexAndSearching() throws Exception {
     Directory directory = newDirectory();
+    if (directory instanceof MockDirectoryWrapper) {
+      ((MockDirectoryWrapper) directory).setAssertNoUnrefencedFilesOnClose(true);
+    }
+
     runStressTest(directory, new ConcurrentMergeScheduler());
     directory.close();
   }
